--- a/m6/data_ref/initial_state.yml
+++ b/m6/data_ref/initial_state.yml
@@ -8,14 +8,12 @@
 add_pools:
   - id: "GLOBOMANTICS_VLAN10"
     default-router:
-      default-router-list:
-        - "192.0.2.254"
+      default-router-list: ["192.0.2.254"]
     dns-server:
-      dns-server-list:
-        - "8.8.8.8"
-        - "8.8.4.4"
+      dns-server-list: ["8.8.4.4", "8.8.8.8"]
     domain-name: "globomantics.com"
     network:
-      number: "192.0.2.0"
-      mask: "255.255.255.0"
+      primary-network:
+        number: "192.0.2.0"
+        mask: "255.255.255.0"
 ...
