basic working pyats/genie

--- a/m4/pyats/testbed.yml
+++ b/m4/pyats/testbed.yml
@@ -1,4 +1,7 @@
 ---
+# Basic information about the current testbed. The credentials supplied
+# are generic to the whole network, which saves some copy/paste in the
+# "devices" section below.
 testbed:
   name: "globomantics_testbed"
   credentials:
@@ -6,33 +9,41 @@ testbed:
       username: pyats
       password: pyats
 
+# Collection of network devices to be tested. In this example, the three
+# routers (R1, R2, and F1) are all running OSPF, a routing protocol, to
+# exchange IP routes, which is the focus of this example. Even though these
+# devices are IOS, not IOS-XE, some of the Genie parsers for IOS have not
+# been fully implemented, but they have for IOS-XE, which generally still
+# work on IOS devices. Note that the hostname for each device, such as R1,
+# is case sensitive and MUST match the configured hostname of the device.
 devices:
-  CSR1:  # case sensitive, must match device hostname
+  R1:
     os: iosxe
     type: CSR1000v
     connections:
       default:
         protocol: ssh
-        ip: "172.31.35.72"
+        ip: "10.0.0.1"
 
-  CSR2:  # case sensitive, must match device hostname
+  R2:
     os: iosxe
     type: CSR1000v
     connections:
       default:
         protocol: ssh
-        ip: "172.31.45.151"
+        ip: "10.0.0.2"
+
+  F1:
+    os: iosxe
+    type: CSR1000v
+    connections:
+      default:
+        protocol: ssh
+        ip: "10.0.0.3"
 
 topology:
-  CSR1:
+  R1:
     interfaces:
-      GigabitEthernet1:
+      Ethernet0/0:
         type: ethernet
         link: BUILTIN
-
-  # CSR2:
-    # interfaces:
-      # Tunnel12:
-        # type: tunnel
-        # link: R1R2
-        # ipv4: "10.1.2.2/24"
